feat(blog): add laal-ishq

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,26 +1,33 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro';
-import Bio from '../../components/Bio.astro';
-import getPostData from '../../utils/getPostData';
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import Bio from "../../components/Bio.astro";
+import readingTime from "reading-time";
+import { getCollection } from "astro:content";
+import { formatTimeAgo } from "../../utils/relativeTime";
 
 export async function getStaticPaths() {
-  const posts = await Astro.glob('../../data/blog-posts/*.md');
-  return posts.map(p => ({
-    params: { slug: p.file.split('/').pop().split('.').shift() },
-    props: { post: p },
+  const blogEntries = await getCollection("blog");
+  return blogEntries.map((entry) => ({
+    params: { slug: entry.slug },
+    props: { entry, readingTime: readingTime(entry.body).text },
   }));
 }
-
-const { Content, frontmatter } = Astro.props.post;
-const { title, description, publishDate } = frontmatter;
-const { slug, readingTime } = getPostData(Astro.props.post);
-const permalink = `${Astro.site.href}blog/${slug}`;
+const { entry, readingTime } = Astro.props;
+const { Content } = await entry.render();
 ---
 
-<BaseLayout title={title} description={description} permalink={permalink} current="blog">
+<BaseLayout
+  title={entry.data.title}
+  description={entry.data.description}
+  permalink={`/blog/${entry.data.slug}`}
+  current="blog"
+>
   <header>
-    <p>{publishDate} ~ {readingTime}</p>
-    <h1>{title}</h1>
+    <h1>{entry.data.title}</h1>
+    <h3>{entry.data.description}</h3>
+    <h4>{formatTimeAgo(entry.data.publishDate)} ~ {readingTime}</h4>
+
+    <h5>{entry.data.tags.map((tag) => `#${tag} `)}</h5>
     <hr />
   </header>
   <div class="container">
