--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,39 +1,52 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro';
+import BaseLayout from "../../layouts/BaseLayout.astro";
 
-const title = 'Blog';
-const description = 'Latest articles.';
+const title = "Blog";
+const description = "Latest articles.";
 const permalink = `${Astro.site.href}blog`;
 
-let allPosts = await Astro.glob('../../data/blog-posts/*.md');
-allPosts = allPosts.sort((a, b) => new Date(b.frontmatter.publishDate).valueOf() - new Date(a.frontmatter.publishDate).valueOf());
+import { getCollection } from "astro:content";
+import { formatTimeAgo } from "../../utils/relativeTime";
+const allPosts = await getCollection("blog");
 ---
 
-<BaseLayout title={title} description={description} permalink={permalink} current="blog">
+<BaseLayout
+  title={title}
+  description={description}
+  permalink={permalink}
+  current="blog"
+>
   <div class="container">
     <h1>Blog</h1>
-    {allPosts.map((post, index) => {
-      const href = `/blog/${post.file.split('/').pop().split('.').shift()}`;
-      return (
-        <div>
-          { index !== 0 && <hr /> }
-          <div class="post-item">
-            <h2>
-              <a href={href}>{post.frontmatter.title}</a>
-            </h2>
-            <p>{post.frontmatter.description}</p>
-            <div class="post-item-footer">
-              <span class="post-item-date">— {post.frontmatter.publishDate}</span>
+    {
+      allPosts.map((post, index) => {
+        const href = `/blog/${post.slug}`;
+        return (
+          <div>
+            {index !== 0 && <hr />}
+            <div class="post-item">
+              <h2>
+                <a href={href} class="title">
+                  {post.data.title}
+                </a>
+                <span class="post-item-date">
+                  — {formatTimeAgo(post.data.publishDate)}
+                </span>
+              </h2>
+              <span>{post.data.tags.map((tag) => `#${tag} `)}</span>
+              <p>{post.data.description}</p>
+              <div class="post-item-footer" />
             </div>
           </div>
-        </div>
-      )
-    })}
+        );
+      })
+    }
   </div>
 </BaseLayout>
 
 <style>
   h2,
+  .title,
   .post-item-footer {
     font-family: var(--font-family-sans);
     font-weight: 700;
@@ -44,6 +57,7 @@ allPosts = allPosts.sort((a, b) => new Date(b.frontmatter.publishDate).valueOf()
     text-align: left;
     text-transform: uppercase;
     margin-right: 16px;
+    font-size: 0.5em;
   }
 
   hr {
