--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,8 +3,8 @@ import Bio from "../components/Bio.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
 const title = "About";
-const description = "About your blog.";
-const permalink = `${Astro.site.href}about`;
+const description = "About me";
+const permalink = `/about`;
 ---
 
 <BaseLayout
