--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,50 +1,56 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 
 export interface Props {
   title: string;
   description: string;
-  permalink: string;
+  permalink?: string;
   current?: string;
+  image?: string;
 }
-const { title, description, permalink, current } = Astro.props;
+const { title, description, permalink = "/", current, image } = Astro.props;
 ---
+
 <html lang="en">
-<head>
-  <BaseHead title={title} description={description} permalink={permalink} />
-</head>
-<body>
-  <div class="layout">
-    <Header current={current} />
+  <head>
+    <BaseHead
+      title={title}
+      description={description}
+      permalink={permalink}
+      image={image}
+    />
+  </head>
+  <body>
+    <div class="layout">
+      <Header current={current} />
 
-    <main>
-      <slot />
-    </main>
+      <main>
+        <slot />
+      </main>
 
-    <Footer />
-  </div>
-</body>
+      <Footer />
+    </div>
+    <style>
+      .layout {
+        display: flex;
+        flex-direction: column;
+        min-height: 100%;
+        min-height: 100vh;
+      }
+
+      main {
+        flex: 1;
+        position: relative;
+        margin: 0 auto;
+        max-width: 1400px;
+        padding: 1em 2em;
+        box-sizing: border-box;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+    </style>
+  </body>
 </html>
-
-<style>
-  .layout {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    min-height: 100vh;
-  }
-
-  main {
-    flex: 1;
-    position: relative;
-    margin: 0 auto;
-    max-width: 1400px;
-    padding: 1em 2em;
-    box-sizing: border-box;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-</style>
