--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,7 +26,7 @@ const { title, description, permalink = "/", current, image } = Astro.props;
     <div class="layout">
       <Header current={current} />
 
-      <main>
+      <main transition:animate="slide">
         <slot />
       </main>
 
