feat(/now): add /now page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ const permalink = `/about`;
   permalink={permalink}
   current="about"
 >
-  <div class="container">
+  <div class="container w-[42em] m-auto">
     <Bio />
 
     <p>Keep visiting!</p>
@@ -30,10 +30,6 @@ const permalink = `/about`;
   .about-image img {
     border-radius: 8px;
     margin-bottom: 1.5em;
-  }
-
-  .container {
-    max-width: 42em;
   }
 
   @media (max-width: 1020px) {
