--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -15,7 +15,7 @@ const allPosts = await getCollection("blog");
   permalink="/blog"
   current="blog"
 >
-  <div class="container">
+  <div class="w-[42rem] m-auto">
     <h1>Blog</h1>
     {
       allPosts.map((post, index) => {
