feat(indieweb): add rel info for indie login

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -39,3 +39,9 @@ const socialUrl = image ?? baseUrl + "/assets/social.png";
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={socialUrl} />
+
+<link href="https://github.com/dineshdb" rel="me" />
+<link
+  rel="webmention"
+  href="https://webmention.io/dbhattarai.info.np/webmention"
+/>
