fix(style): now page max-width

--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -14,7 +14,7 @@ const updatedOn = "2023-09-16T17:00:00+05:45";
   permalink={permalink}
   current="now"
 >
-  <div class="w-[42em] m-auto">
+  <div class="max-w-[42rem] m-auto">
     <h1>{title}</h1>
     <p>Updated {formatTimeAgo(new Date(updatedOn))}</p>
 
