--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -45,3 +45,10 @@ const socialUrl = image ?? baseUrl + "/assets/social.png";
   rel="webmention"
   href="https://webmention.io/dbhattarai.info.np/webmention"
 />
+
+<link
+  rel="alternate"
+  type="application/rss+xml"
+  title="Blog Items"
+  href="/rss.xml"
+/>
