--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,10 @@
   --dark-primary-color: #548e9b;
 
   --font-family-serif: Calibri, Cambria, Helvetica, serif;
-  --font-family-sans: "Fira Sans", sans-serif;
+  --font-family-sans: ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
   --font-family-mono: "SF Mono", menlo, inconsolata, monospace;
 }
 
