--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -1,5 +1,5 @@
 ---
-import RelativeDateTime from "../components/RalativeDateTime";
+import RelativeDateTime from "../components/RelativeDateTime.svelte";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { getLastModifiedDate } from "../utils/fileLastModifiedDate";
 
@@ -18,7 +18,7 @@ const permalink = `/now`;
   <div class="max-w-[42rem] m-auto">
     <h1>{title}</h1>
      Updated
-    <RelativeDateTime datetime={lastModified} client:only="preact" />
+    <RelativeDateTime datetime={lastModified} client:only="svelte" />
 
     <p>Location: Kathmandu, Nepal.</p>
 
