--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -7,7 +7,7 @@ const { post } = Astro.props;
 
 <div class="post-item">
   <header>
-    <a href={`/blog/${post.slug}`} class="no-underline font-semibold text-3xl">
+    <a href={post.slug} class="no-underline font-semibold text-3xl">
       {post.data.title}
     </a>
     <span class="text-secondary">
