--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -7,7 +7,7 @@ const { post } = Astro.props;
 
 <div class="post-item">
   <header>
-    <a href={post.slug} class="no-underline font-semibold text-3xl">
+    <a href={post.slug} class="no-underline font-semibold text-2xl">
       {post.data.title}
     </a>
     <span class="text-secondary">
@@ -19,5 +19,5 @@ const { post } = Astro.props;
   </header>
 
   <span>{post.data.tags.map((tag: string) => <Tag tag={tag} />)}</span>
-  <p>{post.data.description}</p>
+  <p class="mt-1">{post.data.description}</p>
 </div>
