feat: add reading list

--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -75,25 +75,6 @@ const permalink = `/now`;
       </ul>
 
       <section>
-        <h2>Reading:</h2>
-        <ul>
-          <li>The Code of the Extraordinary Mind by Vishen Lakhiani</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>Reading Recommendations:</h2>
-        <ul>
-          <li>
-            <a
-              href="https://harpers.org/archive/2015/10/the-mother-of-all-questions/?single=1"
-              >The Mother of All Questions
-            </a> by Rebecca Solnit
-          </li>
-        </ul>
-      </section>
-
-      <section>
         <h2>Work:</h2>
         <ul>
           <li>
@@ -102,6 +83,10 @@ const permalink = `/now`;
           </li>
         </ul>
       </section>
+    </section>
+
+    <section>
+      <p>Check out my <a href="/reading">reading list</a> as well.</p>
     </section>
 
     <p>
