feat: update on my existential crisis

--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -84,6 +84,17 @@ const permalink = `/now`;
         </ul>
       </section>
     </section>
+    <p>
+      Currenlty, I'm having existential crisis on my future. I'm not able to
+      decide what to do. I want to make impact on the society. I don't want to
+      be someone who is not remembered after they have died. But, I don't have
+      any clue how I can achieve that. Currenlty, I'm mulling over
+      <a
+        href="https://chavanniclass.com/2023/09/16/48-the-do-something-about-it-club/"
+        >Do Something About It Club</a
+      >
+       and Activism to identify ways I can get started.
+    </p>
 
     <section>
       <p>Check out my <a href="/reading">reading list</a> as well.</p>
