--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,6 +16,12 @@ const permalink = `/about`;
   <div class="container w-[42em] m-auto">
     <Bio />
 
+    <ul>
+      <li><a href="/wish">My Wishlist</a></li>
+      <li><a href="/now">My latest updates</a></li>
+      <li><a href="/bucket">My bucket list</a></li>
+    </ul>
+
     <p>Keep visiting!</p>
   </div>
 </BaseLayout>
