--- a/src/pages/TIL/[slug].astro
+++ b/src/pages/TIL/[slug].astro
@@ -1,11 +1,11 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
-import Bio from "../../components/Bio.astro";
-import calculateReadingTime from "reading-time";
 import { getCollection } from "astro:content";
+import calculateReadingTime from "reading-time";
+import Bio from "../../components/Bio.astro";
+import DateTime from "../../components/DateTime.svelte";
 import Tag from "../../components/Tag.astro";
 import WebMentions from "../../components/WebMentions.svelte";
-import RelativeDateTime from "../../components/RelativeDateTime.svelte";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 
 export async function getStaticPaths() {
   const blogEntries = await getCollection("til");
@@ -35,10 +35,7 @@ const { Content, remarkPluginFrontmatter } = await entry.render();
     <h1 class="text-4xl">{entry.data.title}</h1>
     <h3 class="text-2xl">{entry.data.description}</h3>
     <h3 class="text-secondary">
-      Updated <RelativeDateTime
-        datetime={remarkPluginFrontmatter.lastModified}
-        client:only="svelte"
-      />
+      Updated <DateTime datetime={remarkPluginFrontmatter.lastModified} />
       <time datetime={`P${readingTime.minutes}M`}> ~ {readingTime.text}</time>
     </h3>
     <h4 class="text-secondary">
