--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,9 +11,10 @@
   --dark-primary-color: #548e9b;
 
   --font-family-serif: Calibri, Cambria, Helvetica, serif;
-  --font-family-sans: ui-sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+  --font-family-sans:
+    ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
     "Noto Color Emoji";
   --font-family-mono: "SF Mono", menlo, inconsolata, monospace;
 }
@@ -96,12 +97,8 @@ a:hover {
 p a {
   text-decoration: none;
   box-shadow: inset 0 -0.12em 0 var(--primary-color);
-  -webkit-transition:
-    box-shadow 0.2s ease-in-out,
-    color 0.2s ease-in-out;
-  transition:
-    box-shadow 0.2s ease-in-out,
-    color 0.2s ease-in-out;
+  -webkit-transition: box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
 p a:hover {
